[package]
name = "session_jwt_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-service = "2.0.2"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
anyhow = "1.0.95"
chrono = "0.4.39"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
